# shotdetect

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  build.sh  compile.sh  config.h.in  configure  configure.in  description-pak  mkinstalldirs  notes
autom4te.cache/: output.0  requests  traces.0  traces.1
cmake/: FindFFmpeg.cmake  FindGD.cmake  FindLibXml2.cmake  FindLibXslt.cmake  FindPostgreSQL.cmake  FindwxWidgets.cmake  README
conf/: shotdetect.conf
debian/: changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shotdetect-default.ex  shotdetect.doc-base.EX  shotdetect.substvars  watch.ex
doc/: help.txt
include/: DialogHelp.h  DialogShotDetect_c.h  bdd.h  conf.h  config.h  film.h  graph.h  image.h  shot.h  wxProcessVideoThread.h  xml.h
patches/: change-01-fixed_commandline_and_comments.patch  change-02-update_version_and_credits.patch  change-03-threshold_default_75.patch  change-04-add_timecode_to_graph.patch
resources/: cp.xpm  icone_cgp.xpm  shotdetect.cbp
resources/GDWin32/: bgd.def  config.h  ellson-gd.h  makemsvcimport.bat  win32-readme.txt
resources/scilab/: graph.sci
resources/xsl/: default.xslt
scripts/: travis_build_and_test.sh  travis_install.sh
shotdetect/: Cargo.toml
shotdetect/src/: bdd.cc  film.cc  film.h  graph.h  image.cc  image.h  main.cc  shot.cc  shot.h  version.cc.in  version.h  xml.cc
shotdetect/src/ui/: dialog_help.h  dialog_shotdetect.cc  dialog_shotdetect.h  process_video_thread.cc
src/: DialogHelp.cpp  DialogShotDetect_c.cpp  Makefile.am  Makefile.in  bdd.cc  bdd.cpp  bdd.h  commandline.cc  commandline.cpp  conf.cc  conf.cpp  conf.h  film.cc  film.cpp  film.h  graph.cc  graph.cpp  graph.h  image.cc  image.cpp  image.h  main.cc  main.cpp  shot.cc  shot.cpp  shot.h  shotdetect.rs  version.cc.in  wxProcessVideoThread.cpp  xml.cc  xml.cpp  xml.h
src/ui/: dialog_help.cc  dialog_help.h  dialog_shotdetect.cc  dialog_shotdetect.h  process_video_thread.cc  process_video_thread.h
